cmake_minimum_required(VERSION 3.30)
project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled1 verificarPrimeraLetra.cpp)
add_executable(verificarPositivo verificarPositivo.cpp)
add_executable(verificarAprobado verificarAprobado.cpp)
add_executable(verificarCandidato verificarCandidato.cpp)
add_executable(evaluacionCalificacion evaluacionCalificacion.cpp)
